tests/errors/UnknownIdentifier7.q
import os

main() {
	os.unknown()
}